# aclf

./: .gitignore  ACLF_CLINICAL_REFERENCE.md  CODEX_TASK.md  DESIGN.md  EASL_ACLF_CPG_2023_SUMMARY.md  PROVENANCE.md  README.md  agent.py  config.py  instructions.py  prepare_ehr.sbatch  pyproject.toml  run_aclf.py  run_aclf.sbatch  run_mortality_validation.sbatch  schema.py  scoring.py  setup_mortality_r.sbatch  show_prompt.py  validate.py
analysis/: __init__.py  build_validation_cohort.py  mortality_validation.R  setup_r_deps.R
audits/: quick_feasibility.py  quick_feasibility.sbatch
docs/: ACLF_AGENT_PROMPT.md
rag/: __init__.py  build_ehr_db.py  ehr.py  patient_rag.py  tools.py  vectors.py
tests/: __init__.py  test_agent.py  test_build_ehr_db.py  test_rag.py  test_run_aclf.py  test_schema.py  test_scoring.py  test_validation_cohort.py
