[project]
name = "aclf-phenotyping"
version = "0.1.0"
description = "Evidence-grounded EASL-CLIF ACLF phenotyping"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4",
    "numpy>=1.26",
    "openai>=1.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.8"]
vectors = ["sentence-transformers>=3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
